--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
       "js": "node -r sucrase/register"
     }
   },
-  "jest": {
-    "transform": {
-      ".(js|jsx|ts|tsx)": "@sucrase/jest-plugin"
-    }
-  },
+"jest": {
+  "transform": {
+    "^.+\\.[t|j]sx?$": "@sucrase/jest-plugin"
+  }
+},
   "dependencies": {
     "@types/jest": "^25.2.1",
     "cors": "^2.8.5",
@@ -30,7 +30,7 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
-    "jest": "^25.2.6",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.2",
     "sucrase": "^3.13.0",
     "supertest": "^4.0.2"
